@@ -169,10 +169,18 @@ SelectorUpdateTableSingleObject-Debug: leaving...
  SelectorCreate: "pept" created with 107 atoms.
 SelectorUpdateTableSingleObject-Debug: entered..
 SelectorUpdateTableSingleObject-Debug: leaving...
+SelectorUpdateTableSingleObject-Debug: entered..
+SelectorUpdateTableSingleObject-Debug: leaving...
+SelectorUpdateTableSingleObject-Debug: entered..
+SelectorUpdateTableSingleObject-Debug: leaving...
  CmdLoad: "dat/pept.pdb" loaded as "pept".
 PyMOL>show cartoon
  SelectorGetTmp-Debug: entered with "all".
  SelectorGetTmp-Debug: leaving with "all".
+SelectorUpdateTableSingleObject-Debug: entered..
+SelectorUpdateTableSingleObject-Debug: leaving...
+SelectorUpdateTableSingleObject-Debug: entered..
+SelectorUpdateTableSingleObject-Debug: leaving...
 PyMOL>refresh
  RepCartoonNew-Debug: entered.
  RepCartoon: found CA in 1; a2 -1
